# NumInt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Solver.cpp  Solver.hpp  Solver_v0.1.hpp  main.cpp  plot.py
